--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Plastic-Rocket | USERS</title>
+  <link href="img/logo2.png" rel="icon">
   <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'><link rel="stylesheet" href="./style.css">
@@ -703,8 +704,8 @@
 
   <div class="social">
     <a href="https://github.com/YeiserAM" target="_blank" class="social__item">
-      <img src="#" alt="" class="social__img">
-      <span class="social__txt col-sm-6"></span>
+      <img src="#" alt="" class="">
+      <span class="social__txt"></span>
     </a>
     <a href="https://rocket.yeiser.ga/"><button class="bubbly-button col-sm-6">Volver!</button></a>
     
