--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
   </div>
 
   <div class="social">
-    <a href="https://github.com/YeiserAM" target="_blank" class="social__item">
+    <a href="https://github.com/YeiserAM" target="_blank" class="">
       <img src="#" alt="" class="">
       <span class="social__txt"></span>
     </a>
