--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
   <div class="social">
     <a href="https://github.com/YeiserAM" target="_blank" class="">
       <img src="#" alt="" class="">
-      <span class="social__txt"></span>
+      <span class=""></span>
     </a>
     <a href="https://rocket.yeiser.ga/"><button class="bubbly-button col-sm-6">Volver!</button></a>
     
